src/test/deca/context/invalid/sansObj/mod-string.deca
// Description:
//          Modulo sur un int et un string
//
// Résultat:
//Les deux termes doivent être des entiers
//
{
    int a = 10;
    int b;
    b = a % "non-nombre";
}